# terra-mars-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.rst  docker-compose.test.yml  docker-compose.yml  game.json  game_scores.json  manage.py  pyproject.toml  pytest.ini  schema.json
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200721_1714.py  0002_game_number_of_players.py  0003_auto_20200714_1655.py  0004_auto_20200716_1126.py
api/tests/: test_player.py  test_player_scores.py
frontend/: urls.py  views.py
frontend/games/: .gitignore  package-lock.json  package.json  webpack-stats.json  webpack.config.js
frontend/games/src/: App.vue  classes.ts  helpers.ts  main.ts  mars-api-endpoints.ts  mars-api.ts  router.ts
frontend/games/src/auth/: AuthService.js
frontend/games/src/components/: Game.vue  GameDetails.vue  GameForm.vue  GameFormAsyncWrapper.vue  HelloWorld.vue  HomeDashboard.vue  NavBar.vue  PlayerScoreForm.vue  PlayerScoresFormAsyncWrapper.vue
frontend/games/src/components/form-components/: BaseCheckbox.vue  BaseDate.vue  BaseInput.vue  (+3 more)
frontend/games/src/css/: main.scss  palette-mars-1.scss
frontend/games/src/views/: AddGame.vue  Games.vue  Home.vue
frontend/static/templates/: home.html
mars/: __init__.py  asgi.py  celery.py  db_helper.py  urls.py  wsgi.py
mars/api/: models.py  serializers.py
mars/settings/: base.py  production.py  testing.py
mars_api/: apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
mars_api/data_import/: data_importer.py  terra-mars-initial-data.csv
mars_api/management/commands/: calc_player_stats.py  import_initial_data.py
mars_api/migrations/: 0001_initial.py  0001_initial_squashed_0008_auto_20200908_1450.py  0001_initial_squashed_0008_auto_20200908_1450_squashed_0005_auto_20200909_1536.py  0001_player-score-migrations.py  0001_player_user_can_be_null.py  0002_auto_20200802_1108.py  0002_auto_20200802_1108_squashed_0015_auto_20200814_0806.py  0002_auto_20200906_0834.py  0002_auto_20200909_1128.py  0002_playerscore_is_winner.py  0003_auto_20200803_1113.py  0003_auto_20200824_1856.py  0003_auto_20200908_0803.py  0003_auto_20201009_1612.py  0004_add_auth_user.py  0004_auto_20200804_0630.py  0004_auto_20200826_1559.py  0005_auto_20200804_0634.py  0005_auto_20200830_1150.py  0005_playerstats.py  0006_auto_20200806_1215.py  0006_auto_20200830_1301.py  0006_auto_20210705_1637.py  0007_auto_20200810_0905.py  0007_auto_20200830_1318.py  0007_auto_20210706_0805.py  0008_auto_20200811_1811.py  0008_auto_20200830_1319.py  0008_playerstats_last_updated.py  0009_auto_20200830_1327.py
mars_api/stats/: playerstats_calculations.py
tests/: conftest.py  factories.py  test_player_scores.py
tests/data_import/: test_utilities.py
tests/factories/: __init__.py  dictionaries.py
tests/models/: test_game.py  test_player.py  test_playerscore.py  test_playerstats.py
tests/serializers/: test_game.py  test_player.py  test_playerscore.py
tests/stats/: test_playerstats_calculations.py
tests/views/: conftest.py  test_game.py  test_player.py  test_playerscore.py
